cluster/core/longhorn-system/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Storage provider
    gethomepage.dev/group: Internal
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
spec:
  ingressClassName: nginx
  rules:
    - host: &host longhorn.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
